--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-color: #282c34;
 }
 
 .App-logo {
@@ -13,7 +14,10 @@
   }
 }
 
-.App-header {
+.score {
+  background-color: red;
+}
+.App {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
